# radar_generator

./: README.md  main.py  pyproject.toml  radars.toml  test.py
src/radar_generator/: __init__.py  parameter.py
src/radar_generator/radar/: __init__.py  doa.py  pa.py  pri.py  pw.py  rf.py  types.py
src/radar_generator/ui/: __init__.py  __main__.py  base.py  doa.py  pa.py  pri.py  pw.py  rf.py  utils.py
